# DCRsystem_5goki_PC_app

./: .gitignore  README.md  first.py  hsv_config.json  main_5goki.py  main_5goki_ENG.py  main_5goki_JP.py  main_calibration.py  module_cameras_5goki.py  module_gui_ENG.py  module_gui_JP.py  module_relay.py  module_yolo_csv.py  module_yolo_csv3.py  pyproject.toml
.agents/workflows/: dcrsystem5goki.md
.claude/: settings.local.json
cam_pfs/: cam_inside.pfs  cam_outside.pfs  cam_top.pfs  cam_under.pfs
unused/: module_yolo_csv2.py  module_yolo_csv4.py
